--- a/src/app/components/Shopping Cart/product-cart/product-cart.component.html
+++ b/src/app/components/Shopping Cart/product-cart/product-cart.component.html
@@ -7,4 +7,7 @@
     </app-product-cart-item>
   </div>
   <h4>Total price: {{totalPrice}}</h4>
+  <div>
+    <button class="btn btn-success" (click)="submitOrder()">Order</button>
+  </div>
 </div>
