--- a/src/app/views/products-view/products-view.component.html
+++ b/src/app/views/products-view/products-view.component.html
@@ -1,4 +1,4 @@
 <app-product-cart></app-product-cart>
 <app-add-product-form></app-add-product-form>
 <app-error-form [errorText]="errorText"></app-error-form>
-<app-products [products]="planets"></app-products>
+<app-products [products]="products"></app-products>
